<resources>
    <string name="app_name">Tiki</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_nav_home">Trang chủ</string>
    <string name="lbl_nav_category">Danh mục</string>
    <string name="lbl_nav_search">Tìm kiếm</string>
    <string name="lbl_nav_notification">Thông báo</string>
    <string name="lbl_nav_profile">Cá nhân</string>
    <string name="lbl_flash_deal">Giá Sốc</string>
    <string name="lbl_today">Hôm Nay</string>
    <string name="lbl_more">XEM THÊM</string>
</resources>