<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_active"
        android:title="@string/lbl_nav_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_categories_inactive"
        android:title="@string/lbl_nav_category" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_inactive"
        android:title="@string/lbl_nav_search" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_inactive"
        android:title="@string/lbl_nav_notification" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_inactive"
        android:title="@string/lbl_nav_profile" />

</menu>