<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpBanner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/bannerProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minHeight="100dp"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <HorizontalScrollView
                        android:id="@+id/quickLinkContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:background="#FFF"
                        android:scrollbars="none"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rcvQuickLink1"
                                android:layout_width="wrap_content"
                                android:layout_height="75dp"
                                android:layout_alignParentTop="true"
                                android:nestedScrollingEnabled="false"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/item_quick_link" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rcvQuickLink2"
                                android:layout_width="wrap_content"
                                android:layout_height="75dp"
                                android:layout_alignParentBottom="true"
                                android:nestedScrollingEnabled="false"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/item_quick_link" />
                        </RelativeLayout>
                    </HorizontalScrollView>

                    <ProgressBar
                        android:id="@+id/quickLinkProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        tools:visibility="gone" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF">

                    <LinearLayout
                        android:id="@+id/flashDealContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="6dp"
                            android:background="#BDBDBD" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_flash_deal"
                                android:textColor="#FFA726"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/animation_view"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/home_flashicon" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/lbl_today"
                                android:textColor="#FFA726"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:text="@string/lbl_more"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp" />
                        </LinearLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcvFlashDeal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_product" />
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/flashDealProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minHeight="150dp"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>

